--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -14,6 +14,8 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
+- [xterm fixed width on OpenAdmin > Terminal #644](https://github.com/stefanpejcic/OpenPanel/issues/644)
+- [Bug in OpenPanel UI on /account/notifications - email not sent #638](https://github.com/stefanpejcic/OpenPanel/issues/638)
 - [WordPress asking for FTP credentials (Litespeed) #636](https://github.com/stefanpejcic/OpenPanel/issues/636)
 - [Bug on /sites - tooltip not showing on hover over pagespeed #635](https://github.com/stefanpejcic/OpenPanel/issues/635)
 - [Domains > Redirects work only for HTTP and not for HTTPS #645](https://github.com/stefanpejcic/OpenPanel/issues/645)
