--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -28,3 +28,4 @@ Not yet released.
 - fixed bug with SSL missing in OpenPanel UI search.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
+- fixed css bugs with log sectiosn on *OpenAdmin > Services > Logs*.
