--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -11,6 +11,7 @@ Not yet released.
 - `--csf` flag is removed from install script.
 - Administrators can now edit Caddyfile or VirtualHosts files for domains from *OpenAdmin > Domains*.
 - added descriptive error messages to all `/domains` pages on OpenAdmin.
+- all `/wordpress/site/` routes are renamed to `/wordpress/wp-cli/`.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
