--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -31,3 +31,4 @@ Not yet released.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
 - fixed css bugs with log sectiosn on *OpenAdmin > Services > Logs*.
+- [Bug in OpenAdmin UI on *Settings > Emails* after updating webmail domain #634](https://github.com/stefanpejcic/OpenPanel/issues/634)
