--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -1,7 +1,8 @@
 Not yet released.
 
 ### 💅 Polish
-- 'mariadb' is now set as default databse server for new installations.
+- 'mariadb' is now set as default database server for new installations.
+- '8.3' is now set as default php version for new installations.
 - [Support for OpenLiteSpeed [FEATURE REQUEST] #321](https://github.com/stefanpejcic/OpenPanel/issues/321)
 - [Domains > Redirects - add support for custom ports [FEATURE REQUEST] #646](https://github.com/stefanpejcic/OpenPanel/issues/646)
 - `/domains/ssl` and `/domains/docroot` pages are now in separate modules: `ssl` and `docroot`.
