--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -31,6 +31,7 @@ Not yet released.
 - [Bug in OpenAdmin UI on /settings/open-panel #642](https://github.com/stefanpejcic/OpenPanel/issues/642)
 - fixed bug with SSL and Docroot icons missing in *OpenPanel > Dashboard*.
 - fixed bug with 'MySQL Version' text on WPManager when MariaDB is used.
+- fixed error generating files backup from WPManger when subdomain is used.
 - fixed bug with SSL missing in OpenPanel UI search.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
