--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -1,3 +1,4 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
+- [When MariaDB is used, visiting dashboard logs Error response from daemon: No such container: mysql #656](https://github.com/stefanpejcic/OpenPanel/issues/656)
