--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -15,6 +15,7 @@ Not yet released.
 - Administrators can now edit Caddyfile or VirtualHosts files for domains from *OpenAdmin > Domains*.
 - added descriptive error messages to all `/domains` pages on OpenAdmin.
 - all `/wordpress/site/` routes are renamed to `/wordpress/wp-cli/`.
+- 'Import Database' page now dispalys mysql_type: MariaDB or MySQL.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
