--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -30,3 +30,4 @@ Released on August 15, 2025
 - fixed error saving redirects: `TypeError: cannot pickle 're.Match' object` when dev_mode is enabled.
 - fixed bug redirecting to `/api/domains` after creating a redirect from `/domains`.
 - fixed bug with redirects field accepting only https and not http links.
+- [On Export DNS Zone option, error is logged #655](https://github.com/stefanpejcic/OpenPanel/issues/655)
