--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -16,6 +16,7 @@ Not yet released.
 - added descriptive error messages to all `/domains` pages on OpenAdmin.
 - all `/wordpress/site/` routes are renamed to `/wordpress/wp-cli/`.
 - 'Import Database' page now dispalys mysql_type: MariaDB or MySQL.
+- Added 'Show Debug' option on *OpenPanel > Domains > Add New* page.
 
 ### 🐛 Bug Fixes
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
