--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -35,6 +35,7 @@ Not yet released.
 - fixed bug with SSL and Docroot icons missing in *OpenPanel > Dashboard*.
 - fixed bug with 'MySQL Version' text on WPManager when MariaDB is used.
 - fixed error generating files backup from WPManger when subdomain is used.
+- fixed caching issue on `/temporary-link` from WPManager causing same link to be dispalyed for all websites for 15min.
 - fixed bug with SSL missing in OpenPanel UI search.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
