--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -19,6 +19,7 @@ Not yet released.
 - Added 'Show Debug' option on *OpenPanel > Domains > Add New* page.
 
 ### 🐛 Bug Fixes
+- [WP Autologin for OpenLitespeed is 404 #647](https://github.com/stefanpejcic/OpenPanel/issues/647)
 - ['Debugging' tab on WP Manager does not fetch data #653](https://github.com/stefanpejcic/OpenPanel/issues/653)
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
 - [xterm fixed width on OpenAdmin > Terminal #644](https://github.com/stefanpejcic/OpenPanel/issues/644)
