--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -20,6 +20,7 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [WP Autologin for OpenLitespeed is 404 #647](https://github.com/stefanpejcic/OpenPanel/issues/647)
+- [Bug in OpenPanel UI on /website: fail to restore database backups #583](https://github.com/stefanpejcic/OpenPanel/issues/583)
 - ['Debugging' tab on WP Manager does not fetch data #653](https://github.com/stefanpejcic/OpenPanel/issues/653)
 - [Only first domain is working in OpenLitespeed #643](https://github.com/stefanpejcic/OpenPanel/issues/643)
 - [xterm fixed width on OpenAdmin > Terminal #644](https://github.com/stefanpejcic/OpenPanel/issues/644)
@@ -34,9 +35,9 @@ Not yet released.
 - Fixed bug on *OpenAdmin > Advanced > System Cron Jobs* with 'opencli sentinel' commands.
 - [Bug in OpenAdmin UI on /settings/open-panel #642](https://github.com/stefanpejcic/OpenPanel/issues/642)
 - fixed bug with SSL and Docroot icons missing in *OpenPanel > Dashboard*.
-- fixed bug with 'MySQL Version' text on WPManager when MariaDB is used.
-- fixed error generating files backup from WPManger when subdomain is used.
-- fixed caching issue on `/temporary-link` from WPManager causing same link to be dispalyed for all websites for 15min.
+- fixed bug with 'MySQL Version' text on WP Manager when MariaDB is used.
+- fixed error generating files backup from WP Manager when subdomain is used.
+- fixed caching issue on `/temporary-link` from WP Manager causing same link to be dispalyed for all websites for 15min.
 - fixed bug with SSL missing in OpenPanel UI search.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
