--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -31,6 +31,7 @@ Not yet released.
 - [Error adding domain after 1.5.6 update: ERROR 2026 (HY000): TLS/SSL error: self-signed certificate in certificate chain #640](https://github.com/stefanpejcic/OpenPanel/issues/640)
 - [Bug after 1.5.6 update on *Dashboard > 2FA widget* #641](https://github.com/stefanpejcic/OpenPanel/issues/641)
 - [Caddy Logs in OpenAdmin: The log file is empty. #648](https://github.com/stefanpejcic/OpenPanel/issues/648)
+- [FTP sub-user can no longer modify files after adding domain in same dir #609](https://github.com/stefanpejcic/OpenPanel/issues/609)
 - Fixed bug `/entrypoint.sh: line 27: echo [!] Creating include section for domain: josjedan.rs: command not found` when adding domains for openlitespeed webserver.
 - Fixed bug on *OpenAdmin > Advanced > System Cron Jobs* with 'opencli sentinel' commands.
 - [Bug in OpenAdmin UI on /settings/open-panel #642](https://github.com/stefanpejcic/OpenPanel/issues/642)
