--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -44,3 +44,4 @@ Released on August 22, 2025
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
 - fixed css bugs with log sectiosn on *OpenAdmin > Services > Logs*.
 - [Bug in OpenAdmin UI on *Settings > Emails* after updating webmail domain #634](https://github.com/stefanpejcic/OpenPanel/issues/634)
+- fixed 404 error on `/cache/varnish` page.
