--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -1,5 +1,9 @@
 Not yet released.
 
+### 💅 Polish
+- `domain_log_per_page` value for new installations is reduced from `1000` to `500`.
+
 ### 🐛 Bug Fixes
 - [How can end-users view rule ID for WAF? #657](https://github.com/stefanpejcic/OpenPanel/issues/657)
 - [When MariaDB is used, visiting dashboard logs Error response from daemon: No such container: mysql #656](https://github.com/stefanpejcic/OpenPanel/issues/656)
+
