--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [Advanced option for *OpenAdmin > Settings > User Defaults* page](/docs/admin/settings/defaults).
 - `domain_log_per_page` value for new installations is reduced from `1000` to `500`.
 
 ### 🐛 Bug Fixes
