--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -3,6 +3,8 @@ Not yet released.
 ### 💅 Polish
 - [Advanced option for *OpenAdmin > Settings > User Defaults* page](/docs/admin/settings/defaults).
 - `domain_log_per_page` value for new installations is reduced from `1000` to `500`.
+- Enhanced domain ownership validation on *varnish*, *dns*, *capitalize\_domains*, *docroot*, *domain\_logs*, *edit\_vhost*, *redirects*, *ssl*, *domains*, *emails*, *goaccess*, *screenshots*, *mautic*, *php*, *pm2*, *temporary\_links*, *waf*, *website\_builder*, *websites*, and *wordpress* modules.
+- added descriptive error messages for `403` pages.
 
 ### 🐛 Bug Fixes
 - [How can end-users view rule ID for WAF? #657](https://github.com/stefanpejcic/OpenPanel/issues/657)
