--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -4,6 +4,8 @@ Not yet released.
 - [Advanced option for *OpenAdmin > Settings > User Defaults* page](/docs/admin/settings/defaults).
 - [`domain_log_per_page`](https://dev.openpanel.com/cli/config.html#domain-log-per-page) value for new installations is reduced from `1000` to `500`.
 - [Added `permit_username_change_by_user` option that allows administrators to disable username change by end-users](https://dev.openpanel.com/cli/config.html#permit-username-change-by-user).
+- Added `permit_subdomain_sharing` option that allows administrators to allow subdomain sharing among different accounts.
+- added timeout to slave dns zone creation when adding domains.
 - Enhanced domain ownership validation on *varnish*, *dns*, *capitalize\_domains*, *docroot*, *domain\_logs*, *edit\_vhost*, *redirects*, *ssl*, *domains*, *emails*, *goaccess*, *screenshots*, *mautic*, *php*, *pm2*, *temporary\_links*, *waf*, *website\_builder*, *websites*, and *wordpress* modules.
 - added descriptive error messages for `403` pages.
 
