--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -8,6 +8,7 @@ Not yet released.
 - added timeout to slave dns zone creation when adding domains.
 - Enhanced domain ownership validation on *varnish*, *dns*, *capitalize\_domains*, *docroot*, *domain\_logs*, *edit\_vhost*, *redirects*, *ssl*, *domains*, *emails*, *goaccess*, *screenshots*, *mautic*, *php*, *pm2*, *temporary\_links*, *waf*, *website\_builder*, *websites*, and *wordpress* modules.
 - added descriptive error messages for `403` pages.
+- install.sh will now dispaly status of cron service and if cronfile was added.
 
 ### 🐛 Bug Fixes
 - [How can end-users view rule ID for WAF? #657](https://github.com/stefanpejcic/OpenPanel/issues/657)
