--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -7,7 +7,7 @@ Not yet released.
 - Added `permit_subdomain_sharing` option that allows administrators to allow subdomain sharing among different accounts.
 - added timeout to slave dns zone creation when adding domains.
 - Enhanced domain ownership validation on *varnish*, *dns*, *capitalize\_domains*, *docroot*, *domain\_logs*, *edit\_vhost*, *redirects*, *ssl*, *domains*, *emails*, *goaccess*, *screenshots*, *mautic*, *php*, *pm2*, *temporary\_links*, *waf*, *website\_builder*, *websites*, and *wordpress* modules.
-- added descriptive error messages for `403` pages.
+- added descriptive error messages for `403` pages in OpenPanel UI.
 - install.sh will now dispaly status of cron service and if cronfile was added.
 - [Documented system cronjobs](https://dev.openpanel.com/crons.html).
 - 
