--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -10,7 +10,7 @@ Not yet released.
 - added descriptive error messages for `403` pages in OpenPanel UI.
 - install.sh will now dispaly status of cron service and if cronfile was added.
 - [Documented system cronjobs](https://dev.openpanel.com/crons.html).
-- 
+- added note on *OpenAdmin > Settings > Modules* for ClamAV that ARM CPU is not supported.
 
 ### 🐛 Bug Fixes
 - [How can end-users view rule ID for WAF? #657](https://github.com/stefanpejcic/OpenPanel/issues/657)
