--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -15,4 +15,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [How can end-users view rule ID for WAF? #657](https://github.com/stefanpejcic/OpenPanel/issues/657)
 - [When MariaDB is used, visiting dashboard logs Error response from daemon: No such container: mysql #656](https://github.com/stefanpejcic/OpenPanel/issues/656)
-
+- fixed css bug preventing saving "how_to_guides", "found_a_bug_link", "ip_county_flag", "twofa_nag", "password_reset", "weakpass", "permit_subdomain_sharing" from *OpenAdmin > Settings > OpenPanel*.
