--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -13,6 +13,9 @@ Not yet released.
 - added note on *OpenAdmin > Settings > Modules* for ClamAV that ARM CPU is not supported.
 
 ### 🐛 Bug Fixes
+- [WP autoinstall does not generate salts #662](https://github.com/stefanpejcic/OpenPanel/issues/662)
 - [How can end-users view rule ID for WAF? #657](https://github.com/stefanpejcic/OpenPanel/issues/657)
 - [When MariaDB is used, visiting dashboard logs Error response from daemon: No such container: mysql #656](https://github.com/stefanpejcic/OpenPanel/issues/656)
 - fixed css bug preventing saving "how_to_guides", "found_a_bug_link", "ip_county_flag", "twofa_nag", "password_reset", "weakpass", "permit_subdomain_sharing" from *OpenAdmin > Settings > OpenPanel*.
+- [WP autoinstall exits on: Shuffling WordPress Salts in wp-config.php file #661](https://github.com/stefanpejcic/OpenPanel/issues/661)
+- 
