--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -6,7 +6,8 @@ Not yet released.
 - [Added `permit_username_change_by_user` option that allows administrators to disable username change by end-users](https://dev.openpanel.com/cli/config.html#permit-username-change-by-user).
 - Added `permit_subdomain_sharing` option that allows administrators to allow subdomain sharing among different accounts.
 - added timeout to slave dns zone creation when adding domains.
-- Enhanced domain ownership validation on *varnish*, *dns*, *capitalize\_domains*, *docroot*, *domain\_logs*, *edit\_vhost*, *redirects*, *ssl*, *domains*, *emails*, *goaccess*, *screenshots*, *mautic*, *php*, *pm2*, *temporary\_links*, *waf*, *website\_builder*, *websites*, and *wordpress* modules.
+- [MySQL connection details are now displayed in both *Databases* and *Remote MySQL* pages](https://i.postimg.cc/S4ZCzNkk/2025-08-25-16-20.png).
+- Enhanced domain ownership validation on *varnish*, *dns*, *capitalize_domains*, *docroot*, *domain_logs*, *edit_vhost*, *redirects*, *ssl*, *domains*, *emails*, *goaccess*, *screenshots*, *mautic*, *php*, *pm2*, *temporary_links*, *waf*, *website_builder*, *websites*, and *wordpress* modules.
 - added descriptive error messages for `403` pages in OpenPanel UI.
 - install.sh will now dispaly status of cron service and if cronfile was added.
 - [Documented system cronjobs](https://dev.openpanel.com/crons.html).
