--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -22,4 +22,4 @@ Not yet released.
 - [When MariaDB is used, visiting dashboard logs Error response from daemon: No such container: mysql #656](https://github.com/stefanpejcic/OpenPanel/issues/656)
 - fixed css bug preventing saving "how_to_guides", "found_a_bug_link", "ip_county_flag", "twofa_nag", "password_reset", "weakpass", "permit_subdomain_sharing" from *OpenAdmin > Settings > OpenPanel*.
 - [WP autoinstall exits on: Shuffling WordPress Salts in wp-config.php file #661](https://github.com/stefanpejcic/OpenPanel/issues/661)
-- 
+- [OpenAdmin > FTP accounts list empty after 1.4.8 update #658](https://github.com/stefanpejcic/OpenPanel/issues/658)
