--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -23,3 +23,4 @@ Not yet released.
 - fixed css bug preventing saving "how_to_guides", "found_a_bug_link", "ip_county_flag", "twofa_nag", "password_reset", "weakpass", "permit_subdomain_sharing" from *OpenAdmin > Settings > OpenPanel*.
 - [WP autoinstall exits on: Shuffling WordPress Salts in wp-config.php file #661](https://github.com/stefanpejcic/OpenPanel/issues/661)
 - [OpenAdmin > FTP accounts list empty after 1.4.8 update #658](https://github.com/stefanpejcic/OpenPanel/issues/658)
+- fixed bug that causes user's files in *FileManager > Trash* to be owned by `root` user.
