--- a/website/docs/changelog/1.5.8.md
+++ b/website/docs/changelog/1.5.8.md
@@ -24,3 +24,4 @@ Not yet released.
 - [WP autoinstall exits on: Shuffling WordPress Salts in wp-config.php file #661](https://github.com/stefanpejcic/OpenPanel/issues/661)
 - [OpenAdmin > FTP accounts list empty after 1.4.8 update #658](https://github.com/stefanpejcic/OpenPanel/issues/658)
 - fixed bug that causes user's files in *FileManager > Trash* to be owned by `root` user.
+- fixed bug on FileManager with saving column preferences for user.
