--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -1,3 +1,4 @@
 Not yet released.
 
 ### 🐛 Bug Fixes
+-[Selecting files class missing until row is clicked on Files > Trash #664](https://github.com/stefanpejcic/OpenPanel/issues/664)
