--- a/website/docs/changelog/1.5.6.md
+++ b/website/docs/changelog/1.5.6.md
@@ -8,7 +8,7 @@ Released on August 15, 2025
 - `fonts.googleapis.com`, `gstatic.com`, `api.github.com`, `app.grapesjs.com`, `fonts.bunny.net` and `fonts.gstatic.com` removed from CSP header.
 - added html IDs to all sections in *OpenPanel > Dashboard* to be used for custom css.
 - `Failed to load speed data` is removed from /sites when data is missing.
-- [password reset functionallity is restored](https://openpanel.com/docs/panel/intro/#password-reset).
+- [password reset functionality is restored](https://openpanel.com/docs/panel/intro/#password-reset).
 - *restart needed* button on OpenAdmin > Dashboard is now visible to Reseller users as well.
 - [Added resource usage widget on top-right of OpenAdmin](/docs/admin/dashboard/#sse-usage).
 
