--- a/website/docs/changelog/1.5.7.md
+++ b/website/docs/changelog/1.5.7.md
@@ -15,7 +15,7 @@ Released on August 22, 2025
 - Administrators can now edit Caddyfile or VirtualHosts files for domains from *OpenAdmin > Domains*.
 - added descriptive error messages to all `/domains` pages on OpenAdmin.
 - all `/wordpress/site/` routes are renamed to `/wordpress/wp-cli/`.
-- 'Import Database' page now dispalys mysql_type: MariaDB or MySQL.
+- 'Import Database' page now displays mysql_type: MariaDB or MySQL.
 - Added 'Show Debug' option on *OpenPanel > Domains > Add New* page.
 
 ### 🐛 Bug Fixes
@@ -38,7 +38,7 @@ Released on August 22, 2025
 - fixed bug with SSL and Docroot icons missing in *OpenPanel > Dashboard*.
 - fixed bug with 'MySQL Version' text on WP Manager when MariaDB is used.
 - fixed error generating files backup from WP Manager when subdomain is used.
-- fixed caching issue on `/temporary-link` from WP Manager causing same link to be dispalyed for all websites for 15min.
+- fixed caching issue on `/temporary-link` from WP Manager causing same link to be displayed for all websites for 15min.
 - fixed bug with SSL missing in OpenPanel UI search.
 - fixed bug with ImunifyAV missing in OpenAdmin UI search.
 - fixed bug with `docker` service not started on install if `--rapair` flag is used to retry installation.
