--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -6,3 +6,4 @@ Not yet released.
 ### 🐛 Bug Fixes
 - [Selecting files class missing until row is clicked on Files > Trash #664](https://github.com/stefanpejcic/OpenPanel/issues/664)
 - Fixed 500 error `File "<frozen 2087.modules.notifications>", line 290, in view_notifications TypeError: unhashable type: 'list'` on OpenAdmin > Notifications when `?output=json`.
+- Fixed bug with `opencli sentinel` reporting ssh connections count as ip addresses.
