--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -3,6 +3,7 @@ Not yet released.
 ### 💅 Polish
 - Added '[How to setup your email client](/docs/articles/email/how-to-setup-your-email-client)' link on *OpenPanel > Emails > Connect Devices*.
 - `/json/services/<username>` route on OpenAdmin is removed.
+- `/login/token?username=<username>` route on OpenAdmin is renamed to: `/login/token/<username>`.
 
 ### 🐛 Bug Fixes
 - [Selecting files class missing until row is clicked on Files > Trash #664](https://github.com/stefanpejcic/OpenPanel/issues/664)
