--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -4,6 +4,9 @@ Not yet released.
 - Added '[How to setup your email client](/docs/articles/email/how-to-setup-your-email-client)' link on *OpenPanel > Emails > Connect Devices*.
 - `/json/services/<username>` route on OpenAdmin is removed.
 - `/login/token?username=<username>` route on OpenAdmin is renamed to: `/login/token/<username>`.
+- `/core/search_filter` route on OpenAdmin is renamed to: `/search/pages`.
+- `/core/search_users` route on OpenAdmin is renamed to: `/search/users`.
+- `/core/search_websites` route on OpenAdmin is renamed to: `/search/websites`.
 
 ### 🐛 Bug Fixes
 - [Selecting files class missing until row is clicked on Files > Trash #664](https://github.com/stefanpejcic/OpenPanel/issues/664)
