--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - Added '[How to setup your email client](/docs/articles/email/how-to-setup-your-email-client)' link on *OpenPanel > Emails > Connect Devices*.
+- [Default screenshot API is migrated from `http://screenshots-api.openpanel.com/screenshot` to `http://screenshots-v2.openpanel.com/api/screenshot`](https://github.com/stefanpejcic/OpenPanel/commit/b2359dd7efe3ddfec9573be21e3d7fe028a8039b).
 - `/json/services/<username>` route on OpenAdmin is removed.
 - `/login/token?username=<username>` route on OpenAdmin is renamed to: `/login/token/<username>`.
 - `/core/search_filter` route on OpenAdmin is renamed to: `/search/pages`.
