--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -8,8 +8,9 @@ Not yet released.
 - `/core/search_filter` route on OpenAdmin is renamed to: `/search/pages`.
 - `/core/search_users` route on OpenAdmin is renamed to: `/search/users`.
 - `/core/search_websites` route on OpenAdmin is renamed to: `/search/websites`.
-- - Documented `?output=json` pages and resonses in OpenAdmin.
-  - install script will no longer exit if quotas install failed, instead will just display a warning.
+- Documented `?output=json` pages and resonses in OpenAdmin.
+- install script will no longer exit if quotas install failed, instead will just display a warning.
+- for new installations on AlmaLinux, mariadb client will be used instead of mysql.
 
 ### 🐛 Bug Fixes
 - [Selecting files class missing until row is clicked on Files > Trash #664](https://github.com/stefanpejcic/OpenPanel/issues/664)
