--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -17,3 +17,4 @@ Not yet released.
 - Fixed 500 error `File "<frozen 2087.modules.notifications>", line 290, in view_notifications TypeError: unhashable type: 'list'` on OpenAdmin > Notifications when `?output=json`.
 - Fixed bug with `opencli sentinel` reporting ssh connections count as ip addresses.
 - Fixed bug in *OpenPanel > Containers* with max value for cpu/memory preventing edit.
+- Fixed bug `Warning: WEB_SERVER must be 'nginx', 'apache', 'openlitespeed', 'litespeed', or 'openresty', got 'openlitespeed'` when creating user.
