--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -18,3 +18,4 @@ Not yet released.
 - Fixed bug with `opencli sentinel` reporting ssh connections count as ip addresses.
 - Fixed bug in *OpenPanel > Containers* with max value for cpu/memory preventing edit.
 - Fixed bug `Warning: WEB_SERVER must be 'nginx', 'apache', 'openlitespeed', 'litespeed', or 'openresty', got 'openlitespeed'` when creating user.
+- [*Domain X added successfully* message displayed twice when adding domain #660](https://github.com/stefanpejcic/OpenPanel/issues/660)
