--- a/website/docs/changelog/1.5.9.md
+++ b/website/docs/changelog/1.5.9.md
@@ -11,6 +11,7 @@ Not yet released.
 - Documented `?output=json` pages and resonses in OpenAdmin.
 - install script will no longer exit if quotas install failed, instead will just display a warning.
 - for new installations on AlmaLinux, mariadb client will be used instead of mysql.
+- edited install script to remove usage of `$HOME` so that it can be used by Hossted.
 
 ### 🐛 Bug Fixes
 - [Selecting files class missing until row is clicked on Files > Trash #664](https://github.com/stefanpejcic/OpenPanel/issues/664)
@@ -19,3 +20,4 @@ Not yet released.
 - Fixed bug in *OpenPanel > Containers* with max value for cpu/memory preventing edit.
 - Fixed bug `Warning: WEB_SERVER must be 'nginx', 'apache', 'openlitespeed', 'litespeed', or 'openresty', got 'openlitespeed'` when creating user.
 - [*Domain X added successfully* message displayed twice when adding domain #660](https://github.com/stefanpejcic/OpenPanel/issues/660)
+
