--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -1,3 +1,6 @@
 Not yet released.
 
+### 💅 Polish
+- Updated CSF download source to use [SentinelFW](https://github.com/stefanpejcic/sentinelfw) - fork of ConfigServer Firewall & Security.
+
 ### 🐛 Bug Fixes
