--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -4,3 +4,4 @@ Not yet released.
 - Updated CSF download source to use [SentinelFW](https://github.com/stefanpejcic/sentinelfw) - fork of ConfigServer Firewall & Security.
 
 ### 🐛 Bug Fixes
+- [Bug deleting feature set in OpenAdmin #670](https://github.com/stefanpejcic/OpenPanel/issues/670)
