--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -5,3 +5,4 @@ Not yet released.
 
 ### 🐛 Bug Fixes
 - [Bug deleting feature set in OpenAdmin #670](https://github.com/stefanpejcic/OpenPanel/issues/670)
+- [Login to OpenPanel Button - Error 500 #671](https://github.com/stefanpejcic/OpenPanel/issues/671)
