--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -7,3 +7,5 @@ Not yet released.
 - [Bug deleting feature set in OpenAdmin #670](https://github.com/stefanpejcic/OpenPanel/issues/670)
 - [Login to OpenPanel Button - Error 500 #671](https://github.com/stefanpejcic/OpenPanel/issues/671)
 - fixed CORS errors loading website favicons on Site Manager when custom domain and SSL is used.
+- [CSRF error deleting favorite on /account/favorites #672](https://github.com/stefanpejcic/OpenPanel/issues/672)
+
