--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -8,4 +8,5 @@ Not yet released.
 - [Login to OpenPanel Button - Error 500 #671](https://github.com/stefanpejcic/OpenPanel/issues/671)
 - fixed CORS errors loading website favicons on Site Manager when custom domain and SSL is used.
 - [CSRF error deleting favorite on /account/favorites #672](https://github.com/stefanpejcic/OpenPanel/issues/672)
+- [phpmyadmin login link: redirected you too many times. #668](https://github.com/stefanpejcic/OpenPanel/issues/668)
 
