--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -9,4 +9,4 @@ Not yet released.
 - fixed CORS errors loading website favicons on Site Manager when custom domain and SSL is used.
 - [CSRF error deleting favorite on /account/favorites #672](https://github.com/stefanpejcic/OpenPanel/issues/672)
 - [phpmyadmin login link: redirected you too many times. #668](https://github.com/stefanpejcic/OpenPanel/issues/668)
-
+- fixed 403 error on phpmyadmin autologin for users created before 1.4.5 update.
