--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -11,3 +11,4 @@ Not yet released.
 - [CSRF error deleting favorite on /account/favorites #672](https://github.com/stefanpejcic/OpenPanel/issues/672)
 - [phpmyadmin login link: redirected you too many times. #668](https://github.com/stefanpejcic/OpenPanel/issues/668)
 - fixed 403 error on phpmyadmin autologin for users created before 1.4.5 update.
+- fixed [500 error on OpenPanel UI autologin from OpenAdmin](https://community.openpanel.org/d/191-500-error-on-openpanel-ui-autologin-from-openadmin)
