--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -13,3 +13,5 @@ Not yet released.
 - [phpmyadmin login link: redirected you too many times. #668](https://github.com/stefanpejcic/OpenPanel/issues/668)
 - fixed 403 error on phpmyadmin autologin for users created before 1.4.5 update.
 - fixed [500 error on OpenPanel UI autologin from OpenAdmin](https://community.openpanel.org/d/191-500-error-on-openpanel-ui-autologin-from-openadmin)
+- [fixed error in install script with setting SWAP size on installation](https://github.com/stefanpejcic/OpenPanel/pull/682/files)
+- [fixed bug with `opencli imunify` command not updating panel version](https://github.com/stefanpejcic/opencli/pull/40/files).
