--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -16,3 +16,4 @@ Not yet released.
 - fixed [500 error on OpenPanel UI autologin from OpenAdmin](https://community.openpanel.org/d/191-500-error-on-openpanel-ui-autologin-from-openadmin)
 - [fixed error in install script with setting SWAP size on installation](https://github.com/stefanpejcic/OpenPanel/pull/682/files)
 - [fixed bug with `opencli imunify` command not updating panel version](https://github.com/stefanpejcic/opencli/pull/40/files).
+- [fixed bug with `opencli faq` command not properly detecting custom ssl](https://github.com/stefanpejcic/Opencli/issues/41).
