--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -17,3 +17,5 @@ Not yet released.
 - [fixed error in install script with setting SWAP size on installation](https://github.com/stefanpejcic/OpenPanel/pull/682/files)
 - [fixed bug with `opencli imunify` command not updating panel version](https://github.com/stefanpejcic/opencli/pull/40/files).
 - [fixed bug with `opencli faq` command not properly detecting custom ssl](https://github.com/stefanpejcic/Opencli/issues/41).
+- [fixed bug with varnish starting if run from terminal, regardless of users resource limits](https://github.com/stefanpejcic/opencli/issues/2).
+- 
