--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -18,4 +18,4 @@ Not yet released.
 - [fixed bug with `opencli imunify` command not updating panel version](https://github.com/stefanpejcic/opencli/pull/40/files).
 - [fixed bug with `opencli faq` command not properly detecting custom ssl](https://github.com/stefanpejcic/Opencli/issues/41).
 - [fixed bug with varnish starting if run from terminal, regardless of users resource limits](https://github.com/stefanpejcic/opencli/issues/2).
-- 
+- [Cache widget on WPManager displays php warnings #681](https://github.com/stefanpejcic/OpenPanel/issues/681)
