--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -19,3 +19,5 @@ Not yet released.
 - [fixed bug with `opencli faq` command not properly detecting custom ssl](https://github.com/stefanpejcic/Opencli/issues/41).
 - [fixed bug with varnish starting if run from terminal, regardless of users resource limits](https://github.com/stefanpejcic/opencli/issues/2).
 - [Cache widget on WPManager displays php warnings #681](https://github.com/stefanpejcic/OpenPanel/issues/681)
+- [Bug in OpenAdmin UI: saving email client results in 404 #678](https://github.com/stefanpejcic/OpenPanel/issues/678)
+- 
