--- a/website/docs/changelog/1.6.0.md
+++ b/website/docs/changelog/1.6.0.md
@@ -4,6 +4,7 @@ Not yet released.
 - Updated CSF download source to use [SentinelFW](https://github.com/stefanpejcic/sentinelfw) - fork of ConfigServer Firewall & Security.
 - [Added descriptive error messages to OpenAdmin](https://i.postimg.cc/BbVs5HdR/2025-09-05-19-31.png).
 - [added status flag for `opencli user/varnish` command](https://dev.openpanel.com/cli/users.html#Varnish).
+- added 'New Service' button in *OpenPanel > Containers* page allowing users to add new docker services.
 
 ### 🐛 Bug Fixes
 - [500 Error on OpenAdmin auto-login with domain using sustom SSL #671](https://github.com/stefanpejcic/OpenPanel/issues/671)
