--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -1,6 +1,7 @@
 Not yet released.
 
 ### 💅 Polish
+- [ImunifyAV is no longer installed automatically](https://community.openpanel.org/d/193-dont-install-imunifyav-by-default), instead [optional `--imunifyav` flag](/install) is available to install it.
 
 
 ### 🐛 Bug Fixes
