--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -5,3 +5,5 @@ Not yet released.
 
 
 ### 🐛 Bug Fixes
+- fixed error installing on debian when `linux-image-amd64` package is missing.
+- fixed error detecting ip address on install.sh
