--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -4,5 +4,6 @@ Not yet released.
 - [ImunifyAV is no longer installed automatically](https://community.openpanel.org/d/193-dont-install-imunifyav-by-default), instead [optional `--imunifyav` flag](/install) is available to install it.
 
 ### 🐛 Bug Fixes
+- [On install architecture can not be detected if locale is not en_US #689](https://github.com/stefanpejcic/OpenPanel/issues/689)
 - fixed error installing on debian when `linux-image-amd64` package is missing.
 - fixed error detecting ip address on install.sh
