--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -8,3 +8,4 @@ Not yet released.
 - [On install architecture can not be detected if locale is not en_US #689](https://github.com/stefanpejcic/OpenPanel/issues/689)
 - fixed error installing on debian when `linux-image-amd64` package is missing.
 - fixed error detecting ip address on install.sh
+- fixed bug `log_debug: command not found` when installing mail server.
