--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -9,3 +9,5 @@ Not yet released.
 - fixed error installing on debian when `linux-image-amd64` package is missing.
 - fixed error detecting ip address on install.sh
 - fixed bug `log_debug: command not found` when installing mail server.
+- fixed typo in *OpenAdmin > Emails* when mailserver is not running.
+- 
