--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -10,4 +10,4 @@ Not yet released.
 - fixed error detecting ip address on install.sh
 - fixed bug `log_debug: command not found` when installing mail server.
 - fixed typo in *OpenAdmin > Emails* when mailserver is not running.
-- 
+- fixed bug in `opencli admin` command with http always being used in admin_url.
