--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -4,6 +4,7 @@ Not yet released.
 - [ImunifyAV is no longer installed automatically](https://community.openpanel.org/d/193-dont-install-imunifyav-by-default), instead [optional `--imunifyav` flag](/install) is available to install it.
 - implemented success and error messages on *OpenAdmin > Settings > General*.
 - openpanel error log will now on startup display domain and ssl certificates used.
+- Responsive tables on OpenAdmin pages: Administrators, Resellers, Cluster, Domains, Email Accounts, Notifications, Hosting Packages, WAF Rules, System CronJobs, FTP Accounts, Services Status, Feature Manager, Process Manager.
 
 ### 🐛 Bug Fixes
 - [On install architecture can not be detected if locale is not en_US #689](https://github.com/stefanpejcic/OpenPanel/issues/689)
