--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -16,3 +16,4 @@ Not yet released.
 - fixed bug `log_debug: command not found` when installing mail server.
 - fixed typo in *OpenAdmin > Emails* when mailserver is not running.
 - fixed bug in `opencli admin` command with http always being used in admin_url.
+- fixed `Error during email import: Failed to run opencli: /usr/local/opencli/email/setup.sh: line 51: /usr/local/admin/opencli/enterprise.sh: No such file or directory` when accessing Dashboard.
