--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -6,6 +6,7 @@ Not yet released.
 - implemented success and error messages on *OpenAdmin > Settings > General*.
 - openpanel error log will now on startup display domain and ssl certificates used.
 - Responsive tables on OpenAdmin pages: Administrators, Resellers, Cluster, Domains, Email Accounts, Notifications, Hosting Packages, WAF Rules, System CronJobs, FTP Accounts, Services Status, Feature Manager, Process Manager.
+- `geoip` is no longer used on OpenAdmin and OpenPanel.
 
 ### 🐛 Bug Fixes
 - [debian 13 support requested #674](https://github.com/stefanpejcic/OpenPanel/issues/674)
