--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -18,3 +18,4 @@ Not yet released.
 - fixed typo in *OpenAdmin > Emails* when mailserver is not running.
 - fixed bug in `opencli admin` command with http always being used in admin_url.
 - fixed `Error during email import: Failed to run opencli: /usr/local/opencli/email/setup.sh: line 51: /usr/local/admin/opencli/enterprise.sh: No such file or directory` when accessing Dashboard.
+- [Install script failes on CentOS 9 for dbus-user-session #698](https://github.com/stefanpejcic/OpenPanel/issues/698)
