--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -20,3 +20,6 @@ Not yet released.
 - fixed bug in `opencli admin` command with http always being used in admin_url.
 - fixed `Error during email import: Failed to run opencli: /usr/local/opencli/email/setup.sh: line 51: /usr/local/admin/opencli/enterprise.sh: No such file or directory` when accessing Dashboard.
 - [Install script failes on CentOS 9 for dbus-user-session #698](https://github.com/stefanpejcic/OpenPanel/issues/698)
+- fixed `CSS bug: PHP.INI Editor not highlighted in menu when on: /php/php_ini_editor`
+- fixed issue with enabling *New OpenPanel update is available* notifications in OpenAdmin > Notifications settings`
+
