--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -22,4 +22,4 @@ Not yet released.
 - [Install script failes on CentOS 9 for dbus-user-session #698](https://github.com/stefanpejcic/OpenPanel/issues/698)
 - fixed `CSS bug: PHP.INI Editor not highlighted in menu when on: /php/php_ini_editor`
 - fixed issue with enabling *New OpenPanel update is available* notifications in OpenAdmin > Notifications settings
-- fixed issue where a negative value was sometimes displayed for time since last dashboard update in Openpanel > Dashboard 
+- fixed issue where a negative value was sometimes displayed for time since last measurement in Openpanel > Dashboard 
