--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -8,6 +8,7 @@ Not yet released.
 - Responsive tables on OpenAdmin pages: Administrators, Resellers, Cluster, Domains, Email Accounts, Notifications, Hosting Packages, WAF Rules, System CronJobs, FTP Accounts, Services Status, Feature Manager, Process Manager.
 - `geoip` is no longer used on OpenAdmin and OpenPanel.
 - Adjusted notification text on /domains/new failure to provide accurate info.
+- Created [another example plugin](https://github.com/stefanpejcic/dns-visualizer).
 
 ### 🐛 Bug Fixes
 - [debian 13 support requested #674](https://github.com/stefanpejcic/OpenPanel/issues/674)
