--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -9,6 +9,7 @@ Not yet released.
 - `geoip` is no longer used on OpenAdmin and OpenPanel.
 - Adjusted notification text on /domains/new failure to provide accurate info.
 - Created [another example plugin](https://github.com/stefanpejcic/dns-visualizer).
+- Added tooltips on *OpenAdmin > Settings > Modules* to indicate that plugins are auto-activated and enterprise license is required for premium features.
 
 ### 🐛 Bug Fixes
 - [debian 13 support requested #674](https://github.com/stefanpejcic/OpenPanel/issues/674)
