--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -2,6 +2,7 @@ Not yet released.
 
 ### 💅 Polish
 - [Debian 13 is now suported](https://github.com/stefanpejcic/OpenPanel/issues/674)
+- Added print statements for most core modules, detaield debug information is now visible when `dev_mode=on`.
 - [ImunifyAV is no longer installed automatically](https://community.openpanel.org/d/193-dont-install-imunifyav-by-default), instead [optional `--imunifyav` flag](/install) is available to install it.
 - implemented success and error messages on *OpenAdmin > Settings > General*.
 - openpanel error log will now on startup display domain and ssl certificates used.
@@ -26,3 +27,4 @@ Not yet released.
 - fixed issue with enabling *New OpenPanel update is available* notifications in OpenAdmin > Notifications settings
 - fixed issue where a negative value was sometimes displayed for time since last measurement in Openpanel > Dashboard
 - [CSS bugs in OpenAdmin UI on SSH keys #691](https://github.com/stefanpejcic/OpenPanel/issues/691)
+- [OpenAdmin > Settings > Update Preferences: '>' not supported between instances of 'str' and 'NoneType' #700](https://github.com/stefanpejcic/OpenPanel/issues/700)
