--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -28,3 +28,4 @@ Not yet released.
 - fixed issue where a negative value was sometimes displayed for time since last measurement in Openpanel > Dashboard
 - [CSS bugs in OpenAdmin UI on SSH keys #691](https://github.com/stefanpejcic/OpenPanel/issues/691)
 - [OpenAdmin > Settings > Update Preferences: '>' not supported between instances of 'str' and 'NoneType' #700](https://github.com/stefanpejcic/OpenPanel/issues/700)
+- [Bug in Inodes Explorer module: /bin/sh: 1: cd: can't cd to X #686](https://github.com/stefanpejcic/OpenPanel/issues/686)
