--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -11,7 +11,7 @@ Not yet released.
 - Adjusted notification text on /domains/new failure to provide accurate info.
 - Created [another example plugin](https://github.com/stefanpejcic/dns-visualizer).
 - Added tooltips on *OpenAdmin > Settings > Modules* to indicate that plugins are auto-activated and enterprise license is required for premium features.
-- Added optional '--debug' flag to `opencli user-resources` command, displaying commands used if service start/stop fails from OpenAdmin.
+- Added optional '--debug' flag to [`opencli user-resources` command](https://dev.openpanel.com/cli/users.html#Resources), displaying commands used if service start/stop fails from OpenAdmin.
 
 ### 🐛 Bug Fixes
 - [OpenAdmin > Service table not responsive #694](https://github.com/stefanpejcic/OpenPanel/issues/694)
