--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -31,3 +31,4 @@ Not yet released.
 - [OpenAdmin > Settings > Update Preferences: '>' not supported between instances of 'str' and 'NoneType' #700](https://github.com/stefanpejcic/OpenPanel/issues/700)
 - [Bug in Inodes Explorer module: /bin/sh: 1: cd: can't cd to X #686](https://github.com/stefanpejcic/OpenPanel/issues/686)
 - fixed error installing imunifyAV on ARM CPU.
+- [Imunify av, no service deamon ? #685](https://github.com/stefanpejcic/OpenPanel/issues/685)
