--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -9,7 +9,7 @@ Not yet released.
 - Responsive tables on OpenAdmin pages: Administrators, Resellers, Cluster, Domains, Email Accounts, Notifications, Hosting Packages, WAF Rules, System CronJobs, FTP Accounts, Services Status, Feature Manager, Process Manager.
 - `geoip` is no longer used on OpenAdmin and OpenPanel.
 - Adjusted notification text on /domains/new failure to provide accurate info.
-- Created [another example plugin](https://github.com/stefanpejcic/dns-visualizer).
+- Example OpenPanel plugins: [dns-visualizer](https://github.com/stefanpejcic/dns-visualizer) and [domain-diagnostics](https://github.com/stefanpejcic/domain-diagnostics).
 - Added tooltips on *OpenAdmin > Settings > Modules* to indicate that plugins are auto-activated and enterprise license is required for premium features.
 - Added optional '--debug' flag to [`opencli user-resources` command](https://dev.openpanel.com/cli/users.html#Resources), displaying commands used if service start/stop fails from OpenAdmin.
 
