--- a/website/docs/changelog/1.6.1.md
+++ b/website/docs/changelog/1.6.1.md
@@ -33,3 +33,4 @@ Not yet released.
 - [Bug in Inodes Explorer module: /bin/sh: 1: cd: can't cd to X #686](https://github.com/stefanpejcic/OpenPanel/issues/686)
 - fixed error installing imunifyAV on ARM CPU.
 - [Imunify av, no service deamon ? #685](https://github.com/stefanpejcic/OpenPanel/issues/685)
+- fixed bug fetching system packages on *OpenAdmin > Dashboard* for Debian-based distros.
